--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-local-notification-12"
-        version="0.1.3">
+        version="0.1.4">
 
     <name>LocalNotification</name>
 
@@ -124,9 +124,10 @@
                 android:name="de.appplant.cordova.plugin.localnotification.ClearReceiver"
                 android:exported="false" />
 
-            <service
+            <activity
                 android:name="de.appplant.cordova.plugin.localnotification.ClickReceiver"
-                android:exported="false" />
+                android:exported="false"
+                android:theme="@style/Theme.AppCompat.NoActionBar" />
 
             <receiver
                 android:name="de.appplant.cordova.plugin.localnotification.RestoreReceiver"
@@ -199,6 +200,10 @@
             src="src/android/notification/receiver/AbstractTriggerReceiver.java"
             target-dir="src/de/appplant/cordova/plugin/notification/receiver" />
 
+        <source-file
+          src="src/android/notification/receiver/NotificationTrampolineActivity.java"
+          target-dir="src/de/appplant/cordova/plugin/notification/receiver" />
+          
         <source-file
             src="src/android/notification/trigger/DateTrigger.java"
             target-dir="src/de/appplant/cordova/plugin/notification/trigger" />
